project(json2kanata)

add_executable(json2kanata ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp)

install(FILES ${CMAKE_CURRENT_BINARY_DIR}/json2kanata
    PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
    CONFIGURATIONS Debug
    RUNTIME DESTINATION Debug/tools/json2kanata
)
